# learning-rust

./: .gitignore
chapter-10/generic/src/: main.rs
chapter-11/adder/src/: lib.rs
chapter-11/tests/src/: lib.rs
chapter-11/tests/tests/: integration_test.rs
chapter-12/minigrep/src/: lib.rs  main.rs
chapter-14/release_pro/: Cargo.toml
chapter-15/interior_mutability/src/: lib.rs  main.rs
chapter-15/ref_cycle/src/: main.rs
chapter-15/smart-box/src/: main.rs
chapter-16/message-passing/src/: main.rs
chapter-16/mutex/src/: main.rs
chapter-16/threads/src/: main.rs
chapter-17/design-pattern/src/: main.rs
chapter-17/oop/src/: lib.rs
chapter-17/polymorphism/src/: lib.rs
chapter-18/patterns_exhaustive/: Cargo.toml
chapter-18/patterns_exhaustive/src/: main.rs
chapter-19/adv_fn/src/: main.rs
chapter-19/adv_trait/: Cargo.toml
chapter-19/new_type/src/: main.rs
chapter-19/unsafe_rust/src/: main.rs
chapter-2/guessing_game/: Cargo.toml
chapter-2/guessing_game/src/: main.rs
chapter-3/control_flow/src/: main.rs
chapter-3/datatypes/: Cargo.toml
chapter-3/datatypes/src/: main.rs
chapter-3/variable/src/: main.rs
chapter-3/variables/: Cargo.toml
chapter-3/variables/src/: main.rs
chapter-4/own/: Cargo.toml
chapter-4/own/src/: main.rs
chapter-6/enums/src/: main.rs
chapter-7/restaurant/src/: lib.rs
chapter-8/: collections.txt
raytracer/: back.ppm
raytracer/src/: main.rs
zero-to-prod/: notes.txt
zero-to-prod/zero2prod/: Cargo.toml
zero-to-prod/zero2prod/src/: lib.rs  main.rs
zero-to-prod/zero2prod/tests/: health_check.rs
(+36 files in other folders)
